# CrystalDroids

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: setup_deps.sh  setup_dev.sh
scripts/os/: setup_deps_linux.sh
src/: __init__.py  app.py  schemas.py
src/backend/: app.py  db.py  main.py  model.py
src/backend/config/: __init__.py  config.py
src/config/: __init__.py  config.py
src/frontend/: chat.js  index.html.bak  main.py
src/frontend/config/: __init__.py  config.py
src/keys/: README.md
