[tool.poetry]
name = "crystaldroids"
version = "0.1.0"
description = ""
authors = [
    "Trevor Visser <trevor.visser@crystalloids.com>",
    "Nora Oostrom <nora.oostrom@crystalloids.com>",
    "Ibrahim Atli <ibrahim.atli@crystalloids.com>",
]
readme = "README.md"
# packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = "^1.48.0"
google-cloud-firestore = "^2.16.0"
litestar = { extras = ["standard"], version = "^2.8.2" }
pre-commit = "^3.7.0"
commitizen = "^3.24.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
