[tool.poetry]
name = "crystaldroids"
version = "0.2.3"
description = ""
authors = [
    "Trevor Visser <trevor.visser@crystalloids.com>",
    "Nora Oostrom <nora.oostrom@crystalloids.com>",
    "Ibrahim Atli <ibrahim.atli@crystalloids.com>",
]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = "^1.48.0"
google-cloud-firestore = "^2.16.0"
litestar = { extras = ["standard"], version = "^2.8.2" }
pre-commit = "^3.7.0"
commitizen = "^3.24.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.3"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "src/__init__.py:__version__",
    "src/config/config.py:VERSION",
    "pyproject.toml:^version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
